# Huffman-File-Compression

./: .gitignore  CMakeLists.txt  FileManager.cpp  FileManager.h  HuffmanNode.h  HuffmanTree.cpp  HuffmanTree.h  README.md  main.cpp
.github/workflows/: release.yml
